--- a/styles/siteStyle.css
+++ b/styles/siteStyle.css
@@ -94,11 +94,15 @@ header a.logo{
 	display:inline-block;
 	width:200px;
 	padding:16px 15px;
+	height:64px;
+	line-height:28px;
 }
 header a.logo img{
 	max-width:100%;
 	position:relative;
 	top:1px;
+	max-height:32px;
+	vertical-align:middle;
 }
 header .usermenus{
 	padding:15px 20px;
@@ -997,7 +1001,7 @@ table.table span.sort-icon{
 .screens .screen span.icon.main-icon,
 .screens .screen span.glyphicon.main-icon{
 	position:relative;
-	top:12px;
+	top:9px;
 	right:inherit;
 	opacity:1;
 	font-size:32px;
